--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,79 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>accountBook_web Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+  	<spring.version>4.0.2.RELEASE</spring.version>
+  </properties>
+  
   <dependencies>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-core</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-oxm</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-tx</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-jdbc</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-aop</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context-support</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-test</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	
+  	<dependency>
+	   <groupId>org.codehaus.jackson</groupId>
+	   <artifactId>jackson-core-asl</artifactId>
+	   <version>1.9.13</version>
+	  </dependency>
+	  <dependency>
+	   <groupId>org.codehaus.jackson</groupId>
+	   <artifactId>jackson-mapper-asl</artifactId>
+	   <version>1.9.13</version>
+	  </dependency>
+	  
+	  <dependency>
+	  	<groupId>javax</groupId>
+	  	<artifactId>javaee-api</artifactId>
+	  	<version>7.0</version>
+	  </dependency>
+	  
+	  <dependency>
+	      <groupId>com.caucho</groupId>
+	      <artifactId>hessian</artifactId>
+	      <version>3.1.3</version>
+	    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
