--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-log4j12</artifactId>
+	    <version>1.7.25</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>accountBook_web</finalName>
