--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,15 @@
   <url-pattern>/*</url-pattern>
  </filter-mapping>
  
+ <filter>
+ 	<filter-name>ControllerWebFilter</filter-name>
+ 	<filter-class>com.jiang.filter.ControllerWebFilter</filter-class>
+ </filter>
+ <filter-mapping>
+  <filter-name>ControllerWebFilter</filter-name>
+  <url-pattern>/*</url-pattern>
+ </filter-mapping>
+ 
  <context-param>
 	<param-name>log4jConfigLocation</param-name>
 	<param-value>/WEB-INF/classes/log4j.properties</param-value>  	
