--- a/src/main/webapp/miui/package.json
+++ b/src/main/webapp/miui/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "better-scroll": "^1.9.1",
+
     "jquery": "^3.4.1",
+    "bootstrap": "^3.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
